[package]
name = "todo_eframe"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.45"
eframe = { version="0.34.3", default-features = false, features = [
    "default_fonts",
    "wayland",
    "glow",
    "persistence"
]}
ico = "0.5.0"
uuid = { version = "1.23.3", features = ["v7"] }
